# join_compile_commands_json

./: Cargo.toml  README.md
src/: main.rs
